--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <!-- Website - www.codingnepalweb.com -->
   <head>
     <meta charset="UTF-8" />
-    <title>Glassmorphism Calculator HTML CSS JavaScript | CodingNepal</title>
+    <title></title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
